--- a/TaskManager/src/index.css
+++ b/TaskManager/src/index.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.my-custom-bg-class{
+    background-image: url('./assets/rect-bg.svg');
+  }
