--- a/TaskManager/src/components/modals/Large/customCalendar.css
+++ b/TaskManager/src/components/modals/Large/customCalendar.css
@@ -3,101 +3,101 @@
 /* Calendar wrapper */
 .rmdp-wrapper{
 border: none !important;
-border-radius: 0px;
-width: 100%;
-height: 100%;
+border-radius: 0px !important;
+width: 100% !important;
+height: 100% !important;
 
 }
 
 .rmdp-top-class {
-width: 100%;
+width: 100% !important;
 }
 
 .rmdp-calendar{
-width: 100%;
+width: 100% !important;
 }
 .rmdp-shadow{
-    box-shadow: none;
-    border: none;
+    box-shadow: none !important;
+    border: none !important;
 }
     
 
-/* Calendar Heeader */
+/* Calendar Header */
 .rmdp-header{
-padding: 14px ;
+padding: 14px !important;
 }
 
 .rmdp-header > div{
-justify-content: center;
+justify-content: center !important;
 }
 
 .rmdp-header-values{
-margin: 0;
-color: #2B2E33;
-font-size: 20px;
-font-weight: 500;
+margin: 0 !important;
+color: #2B2E33 !important;
+font-size: 20px !important;
+font-weight: 500 !important;
 }
 
 .rmdp-arrow{
-color: #3D3D3D;
+color: #3D3D3D !important;
 }
 
 .rmdp-arrow-container{
-display: block;
+display: block !important;
 }
 
 
 
 /* Calendar content */
 .rmdp-day-picker{
-width: 100%;
-padding: 14px 30px;
+width: 100% !important;
+padding: 14px 30px !important;
 
 } 
 
 
 
 .rmdp-day-picker > div{
-width: 100%;
+width: 100% !important;
 }
 
 /* today day*/
 .teal .rmdp-day.rmdp-today span{
-background-color: transparent;
-color: #2B2E33;
-border: 1px solid #208D8E;
-width: 42px;
-height: 41px;
-border-radius: 100px;
+background-color: transparent !important;
+color: #2B2E33 !important;
+border: 1px solid #208D8E ;
+width: 42px !important;
+height: 41px !important;
+border-radius: 100px !important;
 
 }
 
 
 /* Week names */
 div > .rmdp-week:first-child > .rmdp-week-day{
-color : #CCCFD5;
-font-weight: 500;
-font-family: "dana", sans-serif;
-font-size: 16px;
-line-height: 25px;
-width: 100%;
+color : #CCCFD5 !important;
+font-weight: 500 !important;
+font-family: "dana", sans-serif !important;
+font-size: 16px !important;
+line-height: 25px !important;
+width: 100% !important;
 
 /* overflow: visible; */
 }
 
 .rmdp-week{
-    width: 100%;
+    width: 100% !important;
 }
 
 
 
 /* Calendar range */
 .teal .rmdp-range{
-background-color: transparent;
-border: none;
-box-shadow: none;
-color: #2B2E33;
-background-color: #E3FDFB;
+background-color: transparent !important;
+border: none !important;
+box-shadow: none !important;
+color: #2B2E33 !important;
+background-color: #E3FDFB !important;
 
 }
 
@@ -108,50 +108,50 @@ background-color: #E3FDFB;
 
 /* Range start */
 .rmdp-rtl .rmdp-range.start{
-    background-color: white;
+    background-color: white !important;
 }
 
 .rmdp-rtl .rmdp-range.start span{
-    background-color: #4BECE2 ;
-    font-size: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    background-color: #4BECE2 !important ;
+    font-size: 20px !important;
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;
     height: 41px !important;
     width:  33px !important;
     border-radius: 4px !important;
     color: #2B2E33 !important;
-    margin: 0px auto;
-    position: absolute;
-    top: 0;
-    border: none;
+    margin: 0px auto !important;
+    position: absolute !important;
+    top: 0 !important;
+    border: none !important;
 }
 
 /* Range end */
 .rmdp-rtl .rmdp-range.end span{
-background-color: #4BECE2;
-font-size: 20px;
-display: flex;
-justify-content: center;
-align-items: center;
+background-color: #4BECE2 !important;
+font-size: 20px !important;
+display: flex !important;
+justify-content: center !important;
+align-items: center !important;
 height: 41px !important;
 width:  33px !important;
 border-radius: 4px !important;
 color: #2B2E33 !important;
-margin: 0px auto;
-position: absolute;
-top: 0;
+margin: 0px auto !important;
+position: absolute !important;
+top: 0 !important;
 }
 .rmdp-rtl .rmdp-range.end {
-border-radius: none;
-background-color: transparent;
+border-radius: none !important;
+background-color: transparent !important;
 }
 
 
 /* Hovers */
 .teal .rmdp-day:not(.rmdp-day-hidden) span:hover{
     background-color: transparent !important ;
-    color: #2B2E33;
+    color: #2B2E33 !important;
 }
 
 .rmdp-rtl .rmdp-range.start span:hover{
@@ -165,53 +165,55 @@ background-color: #4BECE2 !important;
 
 /* Days */
 .rmdp-day {
-height: 41px;
-width:  100%;
-margin-top: 5px;
-border-radius: 0px;
-position: relative;
-border: none;
-box-shadow: none;
+height: 41px !important;
+width:  100% !important;
+margin-top: 5px !important;
+border-radius: 0px !important;
+position: relative !important;
+border: none !important;
+box-shadow: none !important;
 }
 
 
 .rmdp-day span{
-font-size: 20px;
-display: flex;
-justify-content: center;
-align-items: center;
-height: 41px;
-width:  33px;
-border-radius: 4px;
+font-size: 20px !important;
+display: flex !important;
+justify-content: center !important; 
+align-items: center !important;
+height: 41px !important;
+width:  33px !important;
+border-radius: 4px !important;
 margin: 0px auto;
-position: absolute;
-top: 0;
+position: absolute !important;
+top: 0 !important;
 }
 
 
 /* deactive Days */
 .rmdp-deactive span{
-color: #CCCFD5;
+color: #CCCFD5 !important;
 }
 
 /* Month and Year */
 
 .teal .rmdp-day.rmdp-selected span:not(.highlight){
-width: 80%;
-transition: background-color .6s;
-color: white;
+width: 80% !important;
+transition: background-color .6s !important;
+color: white !important;
+background-color: #208D8E !important;
+border-radius: 25px !important;
 }
 
-.teal .rmdp-day.rmdp-selected span:not(.highlight):hover{
-color: #009688;
-border: 1px solid #009688;
-box-shadow: none;
-}
+/* .teal .rmdp-day.rmdp-selected span:not(.highlight):hover{
+color: #009688 !important;
+border: 1px solid #009688 !important; 
+box-shadow: none !important;
+} */
 
 
-.teal .rmdp-day:not(.rmdp-day-hidden) span:hover{
-background-color: #4BECE2;
-}
+/* .teal .rmdp-day:not(.rmdp-day-hidden) span:hover{
+background-color: #4BECE2 !important;
+} */
 
 
 .rmdp-ym .rmdp-today span{
