--- a/TaskManager/src/components/dashboard/dashboardCalendar/calendar.css
+++ b/TaskManager/src/components/dashboard/dashboardCalendar/calendar.css
@@ -1,16 +1,11 @@
-
-.fc-scrollgrid-sync-inner{
-    text-align: right;
-}
-.fc-col-header-cell{
-    border-bottom: none !important;
-}
-
 .fc-daygrid-day-frame{
     display: flex;
     justify-content: end;
     align-items: end;
+    
 }
-.fc .fc-daygrid-body-balanced .fc-daygrid-day-events{
-top: 0;
+
+.fc-daygrid-day-top {
+    display: grid !important;
+    width: 100%;
 }
